start of testing smth out